--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
             </li>
         </ul>
     </section>
+    <section>
+        <h2>Our Team</h2>
+        <ul>
+            <li>
+                <img src="./images/team/member-1.jpg" alt="Mark Guerrero">
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/team/member-2.jpg" alt="Tom Ford">
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./images/team/member-3.jpg" alt="Camila Garcia">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/team/member-4.jpg" alt="Daniel Wilson">
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
 </body>
 
 <footer></footer>
