--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <header>
         <nav>
             <ul>
-                <li>WEBSTUDIO</li>
+                <li>
+                    <img src="./images/logo/Logo.svg" alt="Logo">
+                </li>
                 <li>Studio</li>
                 <li>Portfolio</li>
                 <li>Contacts</li>
@@ -81,6 +83,11 @@
     </section>
 </body>
 
-<footer></footer>
+<footer>
+    <img src="./images/logo/Logo.svg" alt="Logo">
+    <p>
+        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+    </p>
+</footer>
 
 </html>
