--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </header>
     <section>
         <h1>Effective Solutions
@@ -81,13 +81,11 @@
             </li>
         </ul>
     </section>
+    <footer>
+        <img src="./images/logo/Logo.svg" alt="Logo">
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
 </body>
-
-<footer>
-    <img src="./images/logo/Logo.svg" alt="Logo">
-    <p>
-        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-    </p>
-</footer>
-
 </html>
