--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </header>
+  <main>
     <section>
         <h1>Effective Solutions
         for Your Business</h1>
@@ -81,6 +82,7 @@
             </li>
         </ul>
     </section>
+  </main>
     <footer>
         <img src="./images/logo/Logo.svg" alt="Logo">
         <p>
