--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav>
             <ul>
                 <li>
-                    <img src="./images/logo/Logo.svg" alt="Logo">
+                    <img src="./images/logo/Logo.svg" alt="Logo" height: 24px; />
                 </li>
                 <li>Studio</li>
                 <li>Portfolio</li>
@@ -61,22 +61,26 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./images/team/member-1.jpg" alt="Mark Guerrero">
+                <img src="./images/team/member-1.jpg" alt="Mark Guerrero" width: 264px;
+                height: 260px;/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/team/member-2.jpg" alt="Tom Ford">
+                <img src="./images/team/member-2.jpg" alt="Tom Ford" width: 264px;
+                height: 260px; />
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/team/member-3.jpg" alt="Camila Garcia">
+                <img src="./images/team/member-3.jpg" alt="Camila Garcia" width: 264px;
+                height: 260px; />
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/team/member-4.jpg" alt="Daniel Wilson">
+                <img src="./images/team/member-4.jpg" alt="Daniel Wilson" width: 264px;
+                height: 260px; />
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
@@ -84,7 +88,7 @@
     </section>
   </main>
     <footer>
-        <img src="./images/logo/Logo.svg" alt="Logo">
+        <img src="./images/logo/Logo.svg" alt="Logo" height: 24px; />
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
