--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 <body>
     <header>
         <nav>
+            <a href="./index.html"><img src="./images/logo/Logo.svg" alt="Logo"/></a>
             <ul>
-                <li>
-                    <img src="./images/logo/Logo.svg" alt="Logo" height: 24px; />
-                </li>
-                <li>Studio</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+                <li><a href="#"></a>Studio</li>
+                <li><a href="#"></a>Portfolio</li>
+                <li><a href="#"></a>Contacts</li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
   <main>
     <section>
@@ -61,26 +63,22 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./images/team/member-1.jpg" alt="Mark Guerrero" width: 264px;
-                height: 260px;/>
+                <img src="./images/team/member-1.jpg" alt="Mark Guerrero" width="264"/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/team/member-2.jpg" alt="Tom Ford" width: 264px;
-                height: 260px; />
+                <img src="./images/team/member-2.jpg" alt="Tom Ford" width="264" />
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/team/member-3.jpg" alt="Camila Garcia" width: 264px;
-                height: 260px; />
+                <img src="./images/team/member-3.jpg" alt="Camila Garcia" width="264" />
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/team/member-4.jpg" alt="Daniel Wilson" width: 264px;
-                height: 260px; />
+                <img src="./images/team/member-4.jpg" alt="Daniel Wilson" width="264" />
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
@@ -88,7 +86,7 @@
     </section>
   </main>
     <footer>
-        <img src="./images/logo/Logo.svg" alt="Logo" height: 24px; />
+        <a href="./index.html"><img src="./images/logo/Logo.svg" alt="Logo"/></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
