--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html"><img src="./images/logo/Logo.svg" alt="Logo"/></a>
+            <a href="./index.html"><img src="./images/logo/Logo.svg" /></a>
             <ul>
-                <li><a href="#"></a>Studio</li>
-                <li><a href="#"></a>Portfolio</li>
-                <li><a href="#"></a>Contacts</li>
+                <li><a href="#">Studio</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
         <address>
@@ -86,7 +86,7 @@
     </section>
   </main>
     <footer>
-        <a href="./index.html"><img src="./images/logo/Logo.svg" alt="Logo"/></a>
+        <a href="./index.html"><img src="./images/logo/Logo.svg" /></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
